<resources>
    <string name="app_name">PetPlanner</string>
    <string name="atividade">Atividade</string>
    <string name="humorExc">Excelente</string>
    <string name="humorHappy">Feliz</string>
    <string name="humorOk">Ok</string>
    <string name="humorBad">Ruim</string>
    <string name="urina">Urina</string>
    <string name="add_obs">Adicione uma observação...</string>
    <string name="cancelar">Cancelar</string>
    <string name="ok">Ok</string>
    <string name="uri_normal">Normal</string>
    <string name="uri_nFez">Não Fez</string>
    <string name="selecione">Selecione uma opção</string>
    <string name="fezes_normal">Normal</string>
    <string name="fezes_mole">Mole</string>
    <string name="fezesNaoFez">Não fez</string>
    <string name="fezes">Fezes</string>
    <string name="atividade_fisica">Atividade Física</string>
    <string name="adicione_uma_atividade">Adicione uma atividade</string>
    <string name="fezes_tempo">Tempo</string>
    <string name="digite_atividade">Campos Vazios</string>
    <string name="humor">Humor</string>
    <string name="fotos">Fotos</string>
    <string name="alimentacao">Alimentação</string>
    <string name="water">Água</string>
    <string name="tipo">Tipo</string>
    <string name="passeio">Passeio</string>
    <string name="vacinacao">Vacinação</string>
    <string name="tratamentos">Tratamentos</string>
    <string name="em_dia">Em dia</string>
    <string name="vermifogo">Vermífogo</string>
    <string name="anti_pulgas">Anti-pulgas</string>
    <string name="consultas">Consultas</string>
    <string name="ultima_em">última em</string>
    <string name="exames">Exames</string>
    <string name="alergias">Alergias</string>
    <string name="nenhuma">nenhuma</string>
    <string name="cirurgias">Cirurgias</string>
    <string name="humor_e_atividade">Humor e Atividade</string>
    <string name="alimentaco_peso">Alimentação e Peso</string>
    <string name="uma_semana">1 semana</string>
    <string name="one_month">1 mês</string>
    <string name="half_year">6 meses</string>
    <string name="a_year">1 ano</string>

</resources>