<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetAtividade"
    android:layout_width="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtCancela"
            android:layout_width="100dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:textStyle="bold"
            android:textSize="17dp"
            android:textColor="@color/red_cancelar" />

        <TextView
            android:id="@+id/txtAtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30.5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="60.5dp"
            android:layout_marginBottom="10dp"
            android:letterSpacing="-0.02"
            android:lineSpacingExtra="5sp"
            android:text="@string/atividade_fisica"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtOk"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_ok"
            android:gravity="center_horizontal"
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            android:textSize="17dp"
            android:text="@string/ok" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="24dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="79dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:letterSpacing="-0.02"
                    android:lineSpacingExtra="5sp"
                    android:layout_marginEnd="228dp"
                    android:text="@string/tipo"
                    android:textColor="#000000"
                    android:textSize="15sp" />
                <EditText
                    android:id="@+id/edtAtvTipo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/passeio"
                    android:layout_gravity="center_vertical"
                    android:inputType="textPersonName"
                    android:textSize="15dp" />
            </LinearLayout>

            <View
                android:layout_width="313dp"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#d1d1d6" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:letterSpacing="-0.02"
                    android:lineSpacingExtra="5sp"
                    android:layout_marginEnd="197dp"
                    android:text="@string/fezes_tempo"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <EditText

                    android:id="@+id/edtAtvTempo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"

                    android:hint="0 minutos"
                    android:layout_gravity="center_vertical"
                    android:inputType="number"
                    android:textSize="15dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#d1d1d6" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>



