<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetFezes"
    android:layout_width="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtCancela"
            android:layout_width="100dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:textStyle="bold"
            android:textSize="17dp"
            android:textColor="@color/red_cancelar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="70.5dp"
            android:layout_marginEnd="90.5dp"
            android:letterSpacing="-0.02"
            android:lineSpacingExtra="5sp"
            android:text="@string/fezes"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtOk"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_ok"
            android:gravity="center_horizontal"
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            android:textSize="17dp"
            android:text="@string/ok" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="24dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="79dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginEnd="170dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:letterSpacing="-0.02"
                        android:lineSpacingExtra="5sp"
                        android:text="@string/fezes_normal"
                        android:textColor="#000000"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#d1d1d6" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginEnd="170dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:letterSpacing="-0.02"
                        android:lineSpacingExtra="5sp"
                        android:text="@string/fezes_mole"
                        android:textColor="#000000"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#d1d1d6" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginEnd="140dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:letterSpacing="-0.02"
                        android:lineSpacingExtra="5sp"
                        android:text="@string/fezesNaoFez"
                        android:textColor="#000000"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RadioGroup
                    android:id="@+id/rdFezes"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:divider="?android:attr/dividerHorizontal"
                    android:showDividers="middle">
                    <RadioButton
                        android:id="@+id/rdbFezesNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_gravity="center_horizontal|center_vertical" />
                    <RadioButton
                        android:id="@+id/rdbFezesMole"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal|center_vertical" />
                    <RadioButton
                        android:id="@+id/rdbFezesNaofez"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal|center_vertical" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="313dp"
            android:layout_height="1dp"
            android:layout_marginBottom="20dp"
            android:background="?android:attr/listDivider" />

        <EditText
            android:id="@+id/edtFezes"
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:background="@null"
            android:gravity="top"

            android:hint="@string/add_obs"
            android:inputType="textPersonName"
            android:textSize="15dp" />

    </LinearLayout>

</LinearLayout>



